# x5_camera

./: RDK_X5_MIPI相机部署与使用说明.md  prompts.txt  sync_mipi_tools_to_board.sh  todo.md
eye_track/: README.txt  package.xml  setup.cfg  setup.py
eye_track/eye_track/: __init__.py  eye_tracker_node.py
eye_track/launch/: eye_track.launch.py
eye_track/scripts/: eye-track.service  launch_eye_track_board.sh
mipi_tools_deploy/: README_MIPI.txt  env.sh  mipi-detect-preview.service  mipi-preview.service  mipi_detect_preview.sh  mipi_gesture_preview.sh  mipi_highperf.sh  mipi_preview.sh  mipi_snap.sh  mipi_stop_conflicts.sh
mipi_tools_deploy/launch/: mipi_cam_websocket_sc132gs.launch.py  mipi_detect_websocket.launch.py  mipi_gesture_sc132gs.launch.py  mipi_hand_lmk_sc132gs.launch.py
